...
                        Label("Privacy Policy", systemImage: "hand.raised")
                    }
                }
            }
            .formStyle(.grouped)
            .navigationTitle("Keyboard")
            .accessibilityIdentifier("keyboardView")
            #if os(iOS)
            .navigationBarTitleDisplayMode(.inline)
            #endif
            #if os(iOS)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
...
